Readjusted the file directory and GUI code to include a new compass icon.