@@ -1,5 +1,6 @@
 plugins {
     id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.13'
 }
 
 repositories {
@@ -7,36 +8,20 @@ repositories {
 }
 
 dependencies {
-    // JSON lib from local directory
-    implementation files('lib/json-20231013.jar')
+    implementation files("lib/json-20231013.jar")
 }
 
-// Define your Java version
+application {
+    mainClass = 'gui.GpsAppGui'
+}
+
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
-def javafxPath = '/Users/ninamason/Downloads/javafx-sdk-21.0.8/lib'
-def javafxModules = 'javafx.controls,javafx.fxml'
-
-// Tell the compiler about JavaFX
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs += [
-        '--module-path', javafxPath,
-        '--add-modules', javafxModules
-    ]
-}
-
-application {
-    // Default to GUI main class unless overridden
-    mainClass = project.hasProperty("mainClass") ? project.getProperty("mainClass") : "gui.GpsAppGui"
-}
-
-run {
-    jvmArgs = [
-        '--module-path', javafxPath,
-        '--add-modules', javafxModules
-    ]
+javafx {
+    version = "21"
+    modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
